test/fail_compilation/fail23.d
// ICE(s2ir.c) DMD0.100

void main()
{
try{
break;
}catch{
}
}

